# fiducial_slam

aruco_detect/: CMakeLists.txt  package.xml
aruco_detect/launch/: aruco_detect.launch.py
aruco_detect/src/: aruco_detect.cpp
aruco_detect/test/: aruco_images_test.cpp
fiducial_msgs/: CMakeLists.txt  package.xml
stag_detect/: CMakeLists.txt  package.xml
stag_detect/cfg/: single.yaml
stag_detect/include/stag_ros/: common.hpp  stag_node.h  utility.hpp
stag_detect/launch/: stag_detect.launch.py
stag_detect/src/stag_ros/: stag_detect.cpp
